# swc-plugin-solid

./: .gitignore  Cargo.toml  README.md  clippy.toml  package.json
src/: builder.rs  config.rs  constants.rs  helpers.rs  lib.rs  transform.rs
src/builder/: builder_types.rs  client.rs  jsx_builder.rs  parser_types.rs
src/builder/client/: block_expr_builder.rs  builder_helpers.rs  custom_client_component_builder.rs  insert_queue.rs  (+7 more)
src/constants/: README.md  events.rs  mathml.rs  properties.rs  svg.rs
src/helpers/: common_into_expressions.rs  compnent_helpers.rs  component_helpers.rs  generate_var_names.rs  opening_element_helpers.rs  parent_visitor_helpers.rs  should_skip.rs
src/transform/: create_new_expr.rs  parent_visitor.rs  postprocess.rs  scope_manager.rs  solid_transform.rs  solid_visitor.rs
tests/attribute_expressions/: 11_20.jsx  11_20_output.js  1_10.jsx  1_10_output.js  21_30.jsx  21_30_output.js  31_40.jsx  31_40_output.js  41_50.jsx  41_50_output.js  51_60.jsx  51_60_output.js  61_70.jsx  61_70_output.js  71_80.jsx  71_80_output.js  81_89.jsx  81_89_output.js  code_output.js
tests/basic/: custom.jsx  custom_complex.jsx  custom_complex_output.js  custom_output.js  input.jsx  input.tsx  output.js  output.ts  style.jsx  style_output.js  style_output.jsx
tests/components/: class_list_test.tsx  class_list_test_output.ts  class_name_test.tsx  class_name_test_output.ts  components_test.jsx  components_test_output.js  hello_world.tsx  hello_world_output.ts  hello_world_variant_one.tsx  hello_world_variant_one_output.ts  with_ref.tsx  with_ref_output.ts
(+8 files in other folders)
