[package]
name = "swc_plugin_solid"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.142"
swc_core = { version = "35.0.*", features = ["ecma_plugin_transform"] }

# .cargo/config.toml defines few alias to build plugin.
# cargo build-wasip1 generates wasm32-wasip1 binary
# cargo build-wasm32 generates wasm32-unknown-unknown binary.
